logfile.output
Terminals which are not used

   COLON


Grammar

    0 $accept: datafile $end

    1 datafile: datafile line EOL
    2         | datafile EOL
    3         | /* empty */

    4 optionalSemicolon: /* empty */
    5                  | SEMICOLON

    6 line: begin optionalSemicolon
    7     | eyeData optionalSemicolon
    8     | audioData optionalSemicolon
    9     | assignment optionalSemicolon
   10     | trigger
   11     | reward optionalSemicolon
   12     | frameSkip optionalSemicolon
   13     | frameCount optionalSemicolon
   14     | eventCode optionalSemicolon
   15     | audioUnderflow optionalSemicolon
   16     | audioSample optionalSemicolon
   17     | end

   18 end: END
   19    | end word

   20 begin: BEGIN_ word
   21      | BEGIN_ word words

   22 word: WORD
   23     | BEGIN_
   24     | TRIGGER
   25     | END
   26     | EYE_DATA
   27     | AUDIO_DATA
   28     | REWARD
   29     | FRAME_SKIP
   30     | EVENT_CODE
   31     | AUDIO_UNDERFLOW
   32     | AUDIO_SAMPLE

   33 words: word
   34      | word words

   35 eyeData: EYE_DATA data

   36 audioData: AUDIO_DATA data

   37 data: literalData
   38     | fcall

   39 literalData: NUMBER
   40            | LBRACKET matrixContents RBRACKET
   41            | LBRACKET RBRACKET
   42            | QUOTED

   43 matrixContents: fullMatrixRow
   44               | fullMatrixRow SEMICOLON multipleMatrixRows

   45 multipleMatrixRows: fullMatrixRow
   46                   | multipleMatrixRows SEMICOLON fullMatrixRow

   47 fullMatrixRow: partMatrixRow

   48 partMatrixRow: data
   49              | partMatrixRow data
   50              | partMatrixRow COMMA data

   51 fcall: word LPAREN arguments RPAREN

   52 arguments: literalData
   53          | literalData COMMA arguments
   54          | address
   55          | address COMMA arguments

   56 assignment: address EQUAL data

   57 address: word
   58        | word addressSuffixes

   59 addressSuffixes: addressSuffix
   60                | addressSuffixes addressSuffix

   61 addressSuffix: DOTWORD
   62              | LPAREN arguments RPAREN
   63              | LBRACE arguments RBRACE

   64 trigger: TRIGGER word
   65        | TRIGGER word structfields SEMICOLON

   66 structfields: structfield
   67             | structfields SEMICOLON structfield

   68 structfield: word EQUAL data

   69 reward: REWARD NUMBER NUMBER NUMBER
   70       | REWARD NUMBER NUMBER NUMBER NUMBER
   71       | REWARD NUMBER NUMBER NUMBER NUMBER NUMBER

   72 frameSkip: FRAME_SKIP NUMBER NUMBER NUMBER NUMBER

   73 audioUnderflow: AUDIO_UNDERFLOW NUMBER NUMBER NUMBER

   74 audioSample: AUDIO_SAMPLE word NUMBER NUMBER

   75 frameCount: FRAME_COUNT NUMBER WORD NUMBER

   76 eventCode: EVENT_CODE NUMBER NUMBER NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 39 69 70 71 72 73 74 75 76
WORD (259) 22 75
DOTWORD (260) 61
QUOTED (261) 42
BEGIN_ (262) 20 21 23
TRIGGER (263) 24 64 65
END (264) 18 25
EYE_DATA (265) 26 35
AUDIO_DATA (266) 27 36
REWARD (267) 28 69 70 71
FRAME_SKIP (268) 29 72
FRAME_COUNT (269) 75
EVENT_CODE (270) 30 76
AUDIO_UNDERFLOW (271) 31 73
AUDIO_SAMPLE (272) 32 74
EOL (273) 1 2
EQUAL (274) 56 68
LPAREN (275) 51 62
RPAREN (276) 51 62
LBRACKET (277) 40 41
RBRACKET (278) 40 41
LBRACE (279) 63
RBRACE (280) 63
COMMA (281) 50 53 55
SEMICOLON (282) 5 44 46 65 67
COLON (283)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
datafile (30)
    on left: 1 2 3, on right: 0 1 2
optionalSemicolon (31)
    on left: 4 5, on right: 6 7 8 9 11 12 13 14 15 16
line (32)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17, on right: 1
end (33)
    on left: 18 19, on right: 17 19
begin (34)
    on left: 20 21, on right: 6
word (35)
    on left: 22 23 24 25 26 27 28 29 30 31 32, on right: 19 20 21 33
    34 51 57 58 64 65 68 74
words (36)
    on left: 33 34, on right: 21 34
eyeData (37)
    on left: 35, on right: 7
audioData (38)
    on left: 36, on right: 8
data (39)
    on left: 37 38, on right: 35 36 48 49 50 56 68
literalData (40)
    on left: 39 40 41 42, on right: 37 52 53
matrixContents (41)
    on left: 43 44, on right: 40
multipleMatrixRows (42)
    on left: 45 46, on right: 44 46
fullMatrixRow (43)
    on left: 47, on right: 43 44 45 46
partMatrixRow (44)
    on left: 48 49 50, on right: 47 49 50
fcall (45)
    on left: 51, on right: 38
arguments (46)
    on left: 52 53 54 55, on right: 51 53 55 62 63
assignment (47)
    on left: 56, on right: 9
address (48)
    on left: 57 58, on right: 54 55 56
addressSuffixes (49)
    on left: 59 60, on right: 58 60
addressSuffix (50)
    on left: 61 62 63, on right: 59 60
trigger (51)
    on left: 64 65, on right: 10
structfields (52)
    on left: 66 67, on right: 65 67
structfield (53)
    on left: 68, on right: 66 67
reward (54)
    on left: 69 70 71, on right: 11
frameSkip (55)
    on left: 72, on right: 12
audioUnderflow (56)
    on left: 73, on right: 15
audioSample (57)
    on left: 74, on right: 16
frameCount (58)
    on left: 75, on right: 13
eventCode (59)
    on left: 76, on right: 14


state 0

    0 $accept: . datafile $end

    $default  reduce using rule 3 (datafile)

    datafile  go to state 1


state 1

    0 $accept: datafile . $end
    1 datafile: datafile . line EOL
    2         | datafile . EOL

    $end             shift, and go to state 2
    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 4
    TRIGGER          shift, and go to state 5
    END              shift, and go to state 6
    EYE_DATA         shift, and go to state 7
    AUDIO_DATA       shift, and go to state 8
    REWARD           shift, and go to state 9
    FRAME_SKIP       shift, and go to state 10
    FRAME_COUNT      shift, and go to state 11
    EVENT_CODE       shift, and go to state 12
    AUDIO_UNDERFLOW  shift, and go to state 13
    AUDIO_SAMPLE     shift, and go to state 14
    EOL              shift, and go to state 15

    line            go to state 16
    end             go to state 17
    begin           go to state 18
    word            go to state 19
    eyeData         go to state 20
    audioData       go to state 21
    assignment      go to state 22
    address         go to state 23
    trigger         go to state 24
    reward          go to state 25
    frameSkip       go to state 26
    audioUnderflow  go to state 27
    audioSample     go to state 28
    frameCount      go to state 29
    eventCode       go to state 30


state 2

    0 $accept: datafile $end .

    $default  accept


state 3

   22 word: WORD .

    $default  reduce using rule 22 (word)


state 4

   20 begin: BEGIN_ . word
   21      | BEGIN_ . word words
   23 word: BEGIN_ .

    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40

    $default  reduce using rule 23 (word)

    word  go to state 41


state 5

   24 word: TRIGGER .
   64 trigger: TRIGGER . word
   65        | TRIGGER . word structfields SEMICOLON

    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40

    $default  reduce using rule 24 (word)

    word  go to state 42


state 6

   18 end: END .
   25 word: END .

    DOTWORD   reduce using rule 25 (word)
    EQUAL     reduce using rule 25 (word)
    LPAREN    reduce using rule 25 (word)
    LBRACE    reduce using rule 25 (word)
    $default  reduce using rule 18 (end)


state 7

   26 word: EYE_DATA .
   35 eyeData: EYE_DATA . data

    NUMBER           shift, and go to state 43
    WORD             shift, and go to state 3
    QUOTED           shift, and go to state 44
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40
    LBRACKET         shift, and go to state 45

    $default  reduce using rule 26 (word)

    word         go to state 46
    data         go to state 47
    literalData  go to state 48
    fcall        go to state 49


state 8

   27 word: AUDIO_DATA .
   36 audioData: AUDIO_DATA . data

    NUMBER           shift, and go to state 43
    WORD             shift, and go to state 3
    QUOTED           shift, and go to state 44
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40
    LBRACKET         shift, and go to state 45

    $default  reduce using rule 27 (word)

    word         go to state 46
    data         go to state 50
    literalData  go to state 48
    fcall        go to state 49


state 9

   28 word: REWARD .
   69 reward: REWARD . NUMBER NUMBER NUMBER
   70       | REWARD . NUMBER NUMBER NUMBER NUMBER
   71       | REWARD . NUMBER NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 51

    $default  reduce using rule 28 (word)


state 10

   29 word: FRAME_SKIP .
   72 frameSkip: FRAME_SKIP . NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 52

    $default  reduce using rule 29 (word)


state 11

   75 frameCount: FRAME_COUNT . NUMBER WORD NUMBER

    NUMBER  shift, and go to state 53


state 12

   30 word: EVENT_CODE .
   76 eventCode: EVENT_CODE . NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 54

    $default  reduce using rule 30 (word)


state 13

   31 word: AUDIO_UNDERFLOW .
   73 audioUnderflow: AUDIO_UNDERFLOW . NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 55

    $default  reduce using rule 31 (word)


state 14

   32 word: AUDIO_SAMPLE .
   74 audioSample: AUDIO_SAMPLE . word NUMBER NUMBER

    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40

    $default  reduce using rule 32 (word)

    word  go to state 56


state 15

    2 datafile: datafile EOL .

    $default  reduce using rule 2 (datafile)


state 16

    1 datafile: datafile line . EOL

    EOL  shift, and go to state 57


state 17

   17 line: end .
   19 end: end . word

    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40

    $default  reduce using rule 17 (line)

    word  go to state 58


state 18

    6 line: begin . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 60


state 19

   57 address: word .
   58        | word . addressSuffixes

    DOTWORD  shift, and go to state 61
    LPAREN   shift, and go to state 62
    LBRACE   shift, and go to state 63

    $default  reduce using rule 57 (address)

    addressSuffixes  go to state 64
    addressSuffix    go to state 65


state 20

    7 line: eyeData . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 66


state 21

    8 line: audioData . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 67


state 22

    9 line: assignment . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 68


state 23

   56 assignment: address . EQUAL data

    EQUAL  shift, and go to state 69


state 24

   10 line: trigger .

    $default  reduce using rule 10 (line)


state 25

   11 line: reward . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 70


state 26

   12 line: frameSkip . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 71


state 27

   15 line: audioUnderflow . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 72


state 28

   16 line: audioSample . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 73


state 29

   13 line: frameCount . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 74


state 30

   14 line: eventCode . optionalSemicolon

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 4 (optionalSemicolon)

    optionalSemicolon  go to state 75


state 31

   23 word: BEGIN_ .

    $default  reduce using rule 23 (word)


state 32

   24 word: TRIGGER .

    $default  reduce using rule 24 (word)


state 33

   25 word: END .

    $default  reduce using rule 25 (word)


state 34

   26 word: EYE_DATA .

    $default  reduce using rule 26 (word)


state 35

   27 word: AUDIO_DATA .

    $default  reduce using rule 27 (word)


state 36

   28 word: REWARD .

    $default  reduce using rule 28 (word)


state 37

   29 word: FRAME_SKIP .

    $default  reduce using rule 29 (word)


state 38

   30 word: EVENT_CODE .

    $default  reduce using rule 30 (word)


state 39

   31 word: AUDIO_UNDERFLOW .

    $default  reduce using rule 31 (word)


state 40

   32 word: AUDIO_SAMPLE .

    $default  reduce using rule 32 (word)


state 41

   20 begin: BEGIN_ word .
   21      | BEGIN_ word . words

    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40

    $default  reduce using rule 20 (begin)

    word   go to state 76
    words  go to state 77


state 42

   64 trigger: TRIGGER word .
   65        | TRIGGER word . structfields SEMICOLON

    WORD             shift, and go to state 3
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40

    $default  reduce using rule 64 (trigger)

    word          go to state 78
    structfields  go to state 79
    structfield   go to state 80


state 43

   39 literalData: NUMBER .

    $default  reduce using rule 39 (literalData)


state 44

   42 literalData: QUOTED .

    $default  reduce using rule 42 (literalData)


state 45

   40 literalData: LBRACKET . matrixContents RBRACKET
   41            | LBRACKET . RBRACKET

    NUMBER           shift, and go to state 43
    WORD             shift, and go to state 3
    QUOTED           shift, and go to state 44
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40
    LBRACKET         shift, and go to state 45
    RBRACKET         shift, and go to state 81

    word            go to state 46
    data            go to state 82
    literalData     go to state 48
    matrixContents  go to state 83
    fullMatrixRow   go to state 84
    partMatrixRow   go to state 85
    fcall           go to state 49


state 46

   51 fcall: word . LPAREN arguments RPAREN

    LPAREN  shift, and go to state 86


state 47

   35 eyeData: EYE_DATA data .

    $default  reduce using rule 35 (eyeData)


state 48

   37 data: literalData .

    $default  reduce using rule 37 (data)


state 49

   38 data: fcall .

    $default  reduce using rule 38 (data)


state 50

   36 audioData: AUDIO_DATA data .

    $default  reduce using rule 36 (audioData)


state 51

   69 reward: REWARD NUMBER . NUMBER NUMBER
   70       | REWARD NUMBER . NUMBER NUMBER NUMBER
   71       | REWARD NUMBER . NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 87


state 52

   72 frameSkip: FRAME_SKIP NUMBER . NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 88


state 53

   75 frameCount: FRAME_COUNT NUMBER . WORD NUMBER

    WORD  shift, and go to state 89


state 54

   76 eventCode: EVENT_CODE NUMBER . NUMBER NUMBER

    NUMBER  shift, and go to state 90


state 55

   73 audioUnderflow: AUDIO_UNDERFLOW NUMBER . NUMBER NUMBER

    NUMBER  shift, and go to state 91


state 56

   74 audioSample: AUDIO_SAMPLE word . NUMBER NUMBER

    NUMBER  shift, and go to state 92


state 57

    1 datafile: datafile line EOL .

    $default  reduce using rule 1 (datafile)


state 58

   19 end: end word .

    $default  reduce using rule 19 (end)


state 59

    5 optionalSemicolon: SEMICOLON .

    $default  reduce using rule 5 (optionalSemicolon)


state 60

    6 line: begin optionalSemicolon .

    $default  reduce using rule 6 (line)


state 61

   61 addressSuffix: DOTWORD .

    $default  reduce using rule 61 (addressSuffix)


state 62

   62 addressSuffix: LPAREN . arguments RPAREN

    NUMBER           shift, and go to state 43
    WORD             shift, and go to state 3
    QUOTED           shift, and go to state 44
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40
    LBRACKET         shift, and go to state 45

    word         go to state 19
    literalData  go to state 93
    arguments    go to state 94
    address      go to state 95


state 63

   63 addressSuffix: LBRACE . arguments RBRACE

    NUMBER           shift, and go to state 43
    WORD             shift, and go to state 3
    QUOTED           shift, and go to state 44
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40
    LBRACKET         shift, and go to state 45

    word         go to state 19
    literalData  go to state 93
    arguments    go to state 96
    address      go to state 95


state 64

   58 address: word addressSuffixes .
   60 addressSuffixes: addressSuffixes . addressSuffix

    DOTWORD  shift, and go to state 61
    LPAREN   shift, and go to state 62
    LBRACE   shift, and go to state 63

    $default  reduce using rule 58 (address)

    addressSuffix  go to state 97


state 65

   59 addressSuffixes: addressSuffix .

    $default  reduce using rule 59 (addressSuffixes)


state 66

    7 line: eyeData optionalSemicolon .

    $default  reduce using rule 7 (line)


state 67

    8 line: audioData optionalSemicolon .

    $default  reduce using rule 8 (line)


state 68

    9 line: assignment optionalSemicolon .

    $default  reduce using rule 9 (line)


state 69

   56 assignment: address EQUAL . data

    NUMBER           shift, and go to state 43
    WORD             shift, and go to state 3
    QUOTED           shift, and go to state 44
    BEGIN_           shift, and go to state 31
    TRIGGER          shift, and go to state 32
    END              shift, and go to state 33
    EYE_DATA         shift, and go to state 34
    AUDIO_DATA       shift, and go to state 35
    REWARD           shift, and go to state 36
    FRAME_SKIP       shift, and go to state 37
    EVENT_CODE       shift, and go to state 38
    AUDIO_UNDERFLOW  shift, and go to state 39
    AUDIO_SAMPLE     shift, and go to state 40
    LBRACKET         shift, and go to state 45

    word         go to state 46
    data         go to state 98
    literalData  go to state 48
    fcall        go to state 49


state 70

   11 line: reward optionalSemicolon .

    $default  reduce using rule 11 (line)


state 71

   12 line: frameSkip optionalSemicolon .

    $default  reduce using rule 12 (line)


state 72

   15 line: audioUnderflow optionalSemicolon .

    $default  reduce using rule 15 (line)


state 73

   16 line: audioSample optionalSemicolon .

    $default  reduce using rule 16 (line)


state 74

   13 line: frameCount optionalSemicolon .

    $default  reduce using rule 13 (line)


state 75

   14 line: eventCode optionalSemicolon .

    $default  reduce using rule 14 (line)


state 76
